changed the second menu bar

--- a/daily_task5/index.html
+++ b/daily_task5/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu Designs</title>
+    <title>Daily Task 5</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -28,8 +28,8 @@
         <li><a href="#">Contact</a></li>
       </ul>
       </div>
-      <div class="second-menu">
-        <p>Second Menu Bar</p>
+      <p>Second Menu Bar</p>
+      <div class="second-menu">        
       <ul>
         <li><a href="#">Work</a></li>
         <li><a href="#">Services</a></li>
