--- a/daily_task6/Buttons/index.html
+++ b/daily_task6/Buttons/index.html
@@ -13,6 +13,8 @@
     </div>
     <div>
         <a href="#" class="sbtn">Read More</a>
+        <a href="#" class="tbtn">Read More</a>
+        <a href="#" class="frbtn">Read More</a>
     </div>
 </body>
 </html>
