Added the bottom pictures.

--- a/daily_task6/Webpage/index.html
+++ b/daily_task6/Webpage/index.html
@@ -44,6 +44,11 @@
         <img src="/img/righthead.png" alt="righthead" class="righthead">
         <img src="/img/rightneak.png" alt="rightneak" class="rightneak">
         <img src="/img/bottomleft.png" alt="bottomleft" class="bottomleft">
+        <img src="/img/1.png" alt="one"class="one">
+        <img src="/img/2.png" alt="two"class="two">
+        <img src="/img/3.png" alt="three"class="three">
+        <img src="/img/5.png" alt="four"class="four">
+        <img src="/img/4.png" alt="five"class="five">
        
     </div>
 </body>
