Adding Images and Finally completing Project with 3 sections.

--- a/daily_task7/index.html
+++ b/daily_task7/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="/img/Title.png">
   </head>
   <body>
     <header>
@@ -69,11 +70,13 @@
     <main>
       <div class="popular">
         <h1>Popular Now <img src="/img/Rectangle 7.png" alt="popular" /></h1>
-        <div class="bgnd"></div>
+        <div class="bgnd">
+          <img src="/img/Rectangle 2.png" alt="" />
+        </div>
         <div class="cards">
           <div class="card1">
             <div class="img-box">
-              <h1 class="rate">
+              <h1>
                 4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
               </h1>
               <img src="/img/Vanilla Latte.png" alt="Vanilla Latte" />
@@ -86,8 +89,64 @@
             <div class="tags">
               <a href="#" class="hot">Hot</a>
               <a href="#" class="cold">Cold</a>
-              <img src="/img/btnlogo.png" alt="" />
+              <img src="/img/Frame 5.png" alt="" />
             </div>
+          </div>
+          <div class="card2">
+            <div class="img-box">
+              <h1>
+                4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
+              </h1>
+              <img src="/img/espresso.png" alt="espresso" />
+            </div>
+
+            <div class="card-text">
+              <h1>Espresso</h1>
+              <p>12K</p>
+            </div>
+            <div class="tags">
+              <a href="#" class="hot">Hot</a>
+              <a href="#" class="cold">Cold</a>
+              <img src="/img/Frame 5.png" alt="" />
+            </div>
+          </div>
+          <div class="card3">
+            <div class="img-box">
+              <h1>
+                4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
+              </h1>
+              <img src="/img/hazelnut latte.png" alt="hazelnut Latte" />
+            </div>
+
+            <div class="card-text">
+              <h1>Hazelnut Latte</h1>
+              <p>23K</p>
+            </div>
+            <div class="tags">
+              <a href="#" class="hot">Hot</a>
+              <a href="#" class="cold">Cold</a>
+              <img src="/img/Frame 5.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="delivery">
+        <h1 class="howto">How to use delivery service</h1>
+        <div class="delivery-card">
+          <div class="firstdev">
+            <img src="/img/coffee-cup 2.png" alt="coffee cup" />
+            <h1>choose your coffee</h1>
+            <p>there are 20+ coffees for you</p>
+          </div>
+          <div class="seconddev">
+            <img src="/img/food-truck 1.png" alt="food-truck" />
+            <h1>we delivery it to you</h1>
+            <p>Choose delivery service</p>
+          </div>
+          <div class="thirddev">
+            <img src="/img/image.png" alt="coffee cup" />
+            <h1>Enjoy your coffee</h1>
+            <p>Choose delivery service</p>
           </div>
         </div>
       </div>
