Final Update on this website

--- a/daily_task7/index.html
+++ b/daily_task7/index.html
@@ -18,12 +18,12 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="/img/Title.png">
+    <link rel="icon" type="image/x-icon" href="img/Title.png">
   </head>
   <body>
     <header>
       <nav>
-        <img src="/img/logo_coffe.svg" alt="logo_coffe" />
+        <img src="img/logo_coffe.svg" alt="logo_coffe" />
         <ul>
           <li>About us</li>
           <li>Our Product</li>
@@ -33,7 +33,7 @@
           <i class="fa-solid fa-magnifying-glass"></i
           ><input type="text" placeholder="capuccino" />
         </div>
-        <img src="/img/icons_cart.png" alt="icons_cart" class="icons_cart" />
+        <img src="img/icons_cart.png" alt="icons_cart" class="icons_cart" />
       </nav>
       <div class="hero">
         <div class="para">
@@ -48,15 +48,15 @@
           </p>
           <div class="btns">
             <a href="#" class="order"
-              >Order Now <img src="/img/btnlogo.png" alt="btn" class="btnlogo"
+              >Order Now <img src="img/btnlogo.png" alt="btn" class="btnlogo"
             /></a>
             <a href="#" class="more">More menu</a>
           </div>
         </div>
         <div class="hero-img">
-          <img src="/img/hero img/Ellipse 5.png" alt="" class="e" />
-          <img src="/img/hero img/Exclude.png" alt="" class="ex" />
-          <img src="/img/hero img/Coffee mug.png" alt="" class="c" />
+          <img src="img/hero img/Ellipse 5.png" alt="" class="e" />
+          <img src="img/hero img/Exclude.png" alt="" class="ex" />
+          <img src="img/hero img/Coffee mug.png" alt="" class="c" />
           <div class="rating">
             <h1 class="capuccino">Cappuccino</h1>
             <h1 class="rate">
@@ -69,9 +69,9 @@
     </header>
     <main>
       <div class="popular">
-        <h1>Popular Now <img src="/img/Rectangle 7.png" alt="popular" /></h1>
+        <h1>Popular Now <img src="img/Rectangle 7.png" alt="popular" /></h1>
         <div class="bgnd">
-          <img src="/img/Rectangle 2.png" alt="" />
+          <img src="img/Rectangle 2.png" alt="" />
         </div>
         <div class="cards">
           <div class="card1">
@@ -79,7 +79,7 @@
               <h1>
                 4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
               </h1>
-              <img src="/img/Vanilla Latte.png" alt="Vanilla Latte" />
+              <img src="img/Vanilla Latte.png" alt="Vanilla Latte" />
             </div>
 
             <div class="card-text">
@@ -89,7 +89,7 @@
             <div class="tags">
               <a href="#" class="hot">Hot</a>
               <a href="#" class="cold">Cold</a>
-              <img src="/img/Frame 5.png" alt="" />
+              <img src="img/Frame 5.png" alt="" />
             </div>
           </div>
           <div class="card2">
@@ -97,7 +97,7 @@
               <h1>
                 4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
               </h1>
-              <img src="/img/espresso.png" alt="espresso" />
+              <img src="img/espresso.png" alt="espresso" />
             </div>
 
             <div class="card-text">
@@ -107,7 +107,7 @@
             <div class="tags">
               <a href="#" class="hot">Hot</a>
               <a href="#" class="cold">Cold</a>
-              <img src="/img/Frame 5.png" alt="" />
+              <img src="img/Frame 5.png" alt="" />
             </div>
           </div>
           <div class="card3">
@@ -115,7 +115,7 @@
               <h1>
                 4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
               </h1>
-              <img src="/img/hazelnut latte.png" alt="hazelnut Latte" />
+              <img src="img/hazelnut latte.png" alt="hazelnut Latte" />
             </div>
 
             <div class="card-text">
@@ -125,7 +125,7 @@
             <div class="tags">
               <a href="#" class="hot">Hot</a>
               <a href="#" class="cold">Cold</a>
-              <img src="/img/Frame 5.png" alt="" />
+              <img src="img/Frame 5.png" alt="" />
             </div>
           </div>
         </div>
@@ -134,17 +134,17 @@
         <h1 class="howto">How to use delivery service</h1>
         <div class="delivery-card">
           <div class="firstdev">
-            <img src="/img/coffee-cup 2.png" alt="coffee cup" />
+            <img src="img/coffee-cup 2.png" alt="coffee cup" />
             <h1>choose your coffee</h1>
             <p>there are 20+ coffees for you</p>
           </div>
           <div class="seconddev">
-            <img src="/img/food-truck 1.png" alt="food-truck" />
+            <img src="img/food-truck 1.png" alt="food-truck" />
             <h1>we delivery it to you</h1>
             <p>Choose delivery service</p>
           </div>
           <div class="thirddev">
-            <img src="/img/image.png" alt="coffee cup" />
+            <img src="img/image.png" alt="coffee cup" />
             <h1>Enjoy your coffee</h1>
             <p>Choose delivery service</p>
           </div>
