desktop part completed

--- a/Second Assignment/index.html
+++ b/Second Assignment/index.html
@@ -30,6 +30,7 @@
           <li>Our Company</li>
           <li>Pages</li>
         </ul>
+        <img src="/src/Menu.png" alt="menu">
       </nav>
       <div class="content">
         <div class="text">
