--- a/Second Assignment/index.html
+++ b/Second Assignment/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-  </head>
+      </head>
   <body>
     <div class="hero">
       <nav>
@@ -30,11 +30,14 @@
           <li>Our Company</li>
           <li>Pages</li>
         </ul>
-        <img src="/src/Menu.png" alt="menu">
+        <img src="/src/Menu.png" alt="menu" />
       </nav>
       <div class="content">
         <div class="text">
-          <h1>We're Serious <br />For Food.</h1>
+          <h1>
+            We're Serious <br>
+            For Food
+          </h1>
           <p>
             We strive to provide a space where guests can connect with<br />
             themselves and explore their full potential, offering a safe place.
