Third Assignment First Commit
Portfolio Website First Commit base push

--- a/Third Assignment/contact.html
+++ b/Third Assignment/contact.html
@@ -64,29 +64,62 @@
         >
       </div>
     </nav>
-    <!-- Hero Section -->
-    <div
-      class="w-full max-md-hero:mt-20 mb-10 flex items-center justify-center gap-7 max-md-hero:block"
-    >
-      <div id="left">
-        <h1 class="font-bold text-6xl max-md-hero:text-center">
-          Monjur Morshed
-        </h1>
-        <div class="w-full h-full max-md-hero:text-center">
-          <h1 id="typewriter" class="text-4xl font-bold"></h1>
-        </div>
-        <p class="max-md-hero:text-center">
-          Passionate about creating innovative solutions through code
+    <!-- Profiles Section  -->
+    <div class="container">
+      <h2 class="text-3xl font-semibold py-2 border-b-2 border-indigo-500">Profiles</h2>
+
+        <a class="btn inline-block my-2 hover:bg-green-400" href="https://github.com/Monjur3175" target="_blank"
+          ><i class="fab fa-github"></i> GitHub</a
+        >
+        <a
+          class="btn inline-block my-2 hover:bg-green-400"
+          href="https://www.linkedin.com/in/monjur-morshed-182566291/"
+          target="_blank"
+          ><i class="fab fa-linkedin"></i> LinkedIn</a
+        >
+        <a
+          class="btn inline-block my-2 hover:bg-green-400"
+          href="https://codeforces.com/profile/monjur7075"
+          target="_blank"
+          ><i class="fas fa-code"></i> Codeforces</a
+        >
+        <a
+          class="btn inline-block my-2 hover:bg-green-400"
+          href="https://www.codechef.com/users/monjurmorshed"
+          target="_blank"
+          ><i class="fas fa-code"></i> CodeChef</a
+        >
+        <a class="btn inline-block my-2 hover:bg-green-400" href="https://t.me/monjur7075" target="_blank"
+          ><i class="fab fa-telegram"></i> Telegram</a
+        >
+        <a
+          class="btn inline-block my-2 hover:bg-green-400"
+          href="mailto:monjurmorshedosama75@gmail.com"
+          target="_blank"
+          ><i class="fas fa-envelope"></i> Email</a
+        >
+        <a
+          class="btn inline-block my-2 hover:bg-green-400"
+          href="https://wa.me/+8801997007988"
+          target="_blank"
+          class="contact-item"
+        >
+          <i class="fab fa-whatsapp"></i> WhatsApp
+        </a>
+    </div>
+    <!-- Contact Section  -->
+    <div class="container">
+      <h2 class="text-3xl font-semibold py-2 border-b-2 border-indigo-500">Contact</h2>
+      <div>
+        <p><i class="fas fa-envelope"></i> monjurmorshedosama75@gmail.com</p>
+        <p><i class="fas fa-phone"></i> +880 1997-007988</p>
+        <p>
+          <i class="fas fa-map-marker-alt"></i> 178, Kazihata, Rajpara,
+          Rajshahi-6000, Bangladesh
         </p>
       </div>
-      <div id="right" class="flex justify-center">
-        <img
-          class="rounded-[50%] mt-8 max-md-hero:mt-8"
-          src="/src/images/Monjur Logo.png"
-          alt="Hero Img"
-        />
-      </div>
     </div>
+
     <!-- Footer -->
     <footer class="bg-green-200/60 px-6 py-12">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -149,6 +182,5 @@
         <p>&copy; 2025 Monjur Morshed. All rights reserved.</p>
       </div>
     </footer>
-    <script src="/js/script.js"></script>
   </body>
 </html>
