--- a/Third Assignment/experience.html
+++ b/Third Assignment/experience.html
@@ -64,29 +64,22 @@
         >
       </div>
     </nav>
-    <!-- Hero Section -->
-    <div
-      class="w-full max-md-hero:mt-20 mb-10 flex items-center justify-center gap-7 max-md-hero:block"
-    >
-      <div id="left">
-        <h1 class="font-bold text-6xl max-md-hero:text-center">
-          Monjur Morshed
-        </h1>
-        <div class="w-full h-full max-md-hero:text-center">
-          <h1 id="typewriter" class="text-4xl font-bold"></h1>
-        </div>
-        <p class="max-md-hero:text-center">
-          Passionate about creating innovative solutions through code
-        </p>
-      </div>
-      <div id="right" class="flex justify-center">
-        <img
-          class="rounded-[50%] mt-8 max-md-hero:mt-8"
-          src="/src/images/Monjur Logo.png"
-          alt="Hero Img"
-        />
-      </div>
+    
+    <!-- Experience Section -->
+    <div id="container" class="m-10 p-2 text-justify bg-indigo-50 rounded-2xl hover:bg-indigo-200">
+      <h2 class="text-3xl font-semibold">Professional Experience</h2>
+      <h3 class="my-2 py-4 border-t-2 border-indigo-500 text-xl font-bold">
+        IT Executive — NextNode
+      </h3>
+      <h4><span class="font-bold">Rajshahi, Bangladesh (Remote) </span>| Dec 2024 – Present</h4>
+      <ul class="list-disc ml-4">
+        <li>Manage and monitor IT infrastructure and endpoints.</li>
+        <li>Support software development operations.</li>
+        <li>Collaborate with cross-functional teams to improve productivity.</li>
+      </ul>
+      <a href="https://nextnode.netlify.app/" target="_blank" rel="noopener noreferrer" class="text-amber-600">Visit NextNode Website</a>
     </div>
+    
     <!-- Footer -->
     <footer class="bg-green-200/60 px-6 py-12">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -149,6 +142,5 @@
         <p>&copy; 2025 Monjur Morshed. All rights reserved.</p>
       </div>
     </footer>
-    <script src="/js/script.js"></script>
   </body>
 </html>
