--- a/Third Assignment/projects.html
+++ b/Third Assignment/projects.html
@@ -64,29 +64,36 @@
         >
       </div>
     </nav>
-    <!-- Hero Section -->
-    <div
-      class="w-full max-md-hero:mt-20 mb-10 flex items-center justify-center gap-7 max-md-hero:block"
-    >
-      <div id="left">
-        <h1 class="font-bold text-6xl max-md-hero:text-center">
-          Monjur Morshed
-        </h1>
-        <div class="w-full h-full max-md-hero:text-center">
-          <h1 id="typewriter" class="text-4xl font-bold"></h1>
-        </div>
-        <p class="max-md-hero:text-center">
-          Passionate about creating innovative solutions through code
-        </p>
-      </div>
-      <div id="right" class="flex justify-center">
-        <img
-          class="rounded-[50%] mt-8 max-md-hero:mt-8"
-          src="/src/images/Monjur Logo.png"
-          alt="Hero Img"
-        />
-      </div>
+    <!-- Projects  -->
+    <div id="container" class="m-10 p-2 text-justify bg-indigo-50 rounded-2xl hover:bg-indigo-200">
+      <h2 class="text-3xl font-semibold">Foodies</h2>
+      <h3 class="my-2 py-2 border-t-2 border-indigo-500 text-xl font-bold">
+        We're Serious For Food
+      </h3>
+      <h4><span class="font-bold">Food Delivery Website </span>using Raw HTML and CSS</h4>
+      <a href="https://second-assignment-html-css-monjur.netlify.app/" target="_blank" rel="noopener noreferrer" class="text-amber-600">Live Link</a>
+      <br>
+      <a href="https://github.com/Monjur3175/Interactive-Cares/tree/main/Second%20Assignment" target="_blank" class="text-violet-500 underline">Github Link</a>
     </div>
+    <div id="container" class="m-10 p-2 text-justify bg-indigo-50 rounded-2xl hover:bg-indigo-200">
+      <h2 class="text-3xl font-semibold">HTML Canvas</h2>
+      <h3 class="my-2 py-2 border-t-2 border-indigo-500 text-xl font-bold">
+        HTML Project
+      </h3>
+      <h4>First Assignment of <span class="font-bold">MERN Stack Course </span>using Raw HTML</h4>
+      <a href="https://first-assignment-html.netlify.app/" target="_blank" rel="noopener noreferrer" class="text-amber-600">Live Link</a>
+      <br>
+      <a href="https://github.com/Monjur3175/Interactive-Cares/tree/main/First%20Assignment" target="_blank" class="text-violet-500 underline">Github Link</a>
+    </div>
+    <div id="container" class="m-10 p-2 text-justify bg-indigo-50 rounded-2xl hover:bg-indigo-200">
+      <h2 class="text-3xl font-semibold">CGPA Calculator</h2>
+      <h3 class="my-2 py-2 border-t-2 border-indigo-500 text-xl font-bold">
+       A Calculator to calculate CGPA using Command Line Interface
+      </h3>
+      <h4>First <span class="font-bold">Academic</span> Project using C++</h4>
+           <a href="https://github.com/Monjur3175/Programming/tree/main/CGPA%20Calculator" target="_blank" class="text-violet-500 underline">Github Link</a>
+    </div>
+
     <!-- Footer -->
     <footer class="bg-green-200/60 px-6 py-12">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -149,6 +156,5 @@
         <p>&copy; 2025 Monjur Morshed. All rights reserved.</p>
       </div>
     </footer>
-    <script src="/js/script.js"></script>
   </body>
 </html>
