navbar and footer class change

--- a/Third Assignment/about.html
+++ b/Third Assignment/about.html
@@ -20,7 +20,7 @@
   <body class="font-google">
     <!-- Navbar -->
     <nav
-      class="sticky top-0 left-0 w-full z-50 bg-green-200/60 backdrop-blur-md border-b border-blue-300/30 flex justify-between p-4 max-md:block"
+      class="navbar"
     >
       <div class="flex items-center gap-3">
         <img src="/src/images/Monjur_Logo.png" width="40" alt="Logo" />
@@ -58,7 +58,7 @@
           >Certificates</a
         >
         <a
-          class="p-4 rounded-xl text-black hover:bg-white hover:shadow-[4px_4px_10px_0px_#000000]"
+          class="p-4 rounded-xl text-white hover:text-black hover:bg-white hover:shadow-[4px_4px_10px_0px_#000000]"
           href="contact.html"
           >Contact</a
         >
@@ -179,14 +179,14 @@
       <h2 class="text-3xl font-semibold border-b-2 border-indigo-500 pb-2">
         Interest
       </h2>
-      <div class="flex justify-between px-32">
-        <h3 class="pt-4 text-xl font-bold">Competitive Programming</h3>
+      <div class="flex justify-around px-32 gap-2">
+        <h3 class="pt-4 text-xl font-bold mt-2 btn text-center">Competitive Programming</h3>
 
-        <h3 class="pt-4 text-xl font-bold">Web Development</h3>
+        <h3 class="pt-4 text-xl font-bold mt-2 btn text-center">Web Development</h3>
       </div>
     </div>
     <!-- Footer -->
-    <footer class="bg-green-200/60 px-6 py-12">
+    <footer class="foot">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
         <div>
           <h3 class="text-xl font-semibold mb-4">Contact Me</h3>
