--- a/Third Assignment/index.html
+++ b/Third Assignment/index.html
@@ -20,11 +20,11 @@
   <body class="font-google">
     <!-- Navbar -->
     <nav
-      class="sticky top-0 left-0 w-full z-50 bg-green-200/60 backdrop-blur-md border-b border-blue-300/30 flex justify-between p-4 max-md:block"
+      class="navbar"
     >
       <div class="flex items-center gap-3">
         <img src="/src/images/Monjur_Logo.png" width="40" alt="Logo" />
-        <a class="font-semibold text-3xl" href="index.html">Monjur Morshed</a>
+        <a class="font-semibold text-3xl " href="index.html">Monjur Morshed</a>
       </div>
       <div class="mt-2">
         <a
@@ -58,7 +58,7 @@
           >Certificates</a
         >
         <a
-          class="p-4 rounded-xl text-black hover:bg-white hover:shadow-[4px_4px_10px_0px_#000000]"
+          class="p-4 rounded-xl text-White hover:bg-white hover:text-black hover:shadow-[4px_4px_10px_0px_#000000]"
           href="contact.html"
           >Contact</a
         >
@@ -88,7 +88,7 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer class="bg-green-200/60 px-6 py-12">
+    <footer class="foot">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
         <div>
           <h3 class="text-xl font-semibold mb-4">Contact Me</h3>
@@ -126,7 +126,7 @@
             <a
               href="https://github.com/Monjur3175"
               target="_blank"
-              class="hover:text-white"
+              class="hover:text-black"
               ><i class="fab fa-github"></i
             ></a>
             <a
