--- a/Third Assignment/skills.html
+++ b/Third Assignment/skills.html
@@ -20,7 +20,7 @@
   <body class="font-google">
     <!-- Navbar -->
     <nav
-      class="sticky top-0 left-0 w-full z-50 bg-green-200/60 backdrop-blur-md border-b border-blue-300/30 flex justify-between p-4 max-md:block"
+      class="navbar"
     >
       <div class="flex items-center gap-3">
         <img src="/src/images/Monjur_Logo.png" width="40" alt="Logo" />
@@ -58,7 +58,7 @@
           >Certificates</a
         >
         <a
-          class="p-4 rounded-xl text-black hover:bg-white hover:shadow-[4px_4px_10px_0px_#000000]"
+          class="p-4 rounded-xl text-white hover:text-black hover:bg-white hover:shadow-[4px_4px_10px_0px_#000000]"
           href="contact.html"
           >Contact</a
         >
@@ -179,7 +179,7 @@
                 </div>
 
     <!-- Footer -->
-    <footer class="bg-green-200/60 px-6 py-12">
+    <footer class="foot">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
         <div>
           <h3 class="text-xl font-semibold mb-4">Contact Me</h3>
