small details change

--- a/Third Assignment/projects.html
+++ b/Third Assignment/projects.html
@@ -93,6 +93,14 @@
       <h4>First <span class="font-bold">Academic</span> Project using C++</h4>
            <a href="https://github.com/Monjur3175/Programming/tree/main/CGPA%20Calculator" target="_blank" class="text-violet-500 underline">Github Link</a>
     </div>
+    <div id="container" class="m-10 p-2 text-justify bg-indigo-50 rounded-2xl hover:bg-indigo-200">
+      <h2 class="text-3xl font-semibold">Facial Recognition Attendance</h2>
+      <h3 class="my-2 py-2 border-t-2 border-indigo-500 text-xl font-bold">
+        Python Project
+      </h3>
+      <h4>Face recognition-based attendance utility</h4>      
+      <a href="https://github.com/Monjur3175/Programming/blob/main/Python%20Project/facialrecognition.py" target="_blank" class="text-violet-500 underline">Github Link</a>
+    </div>
 
     <!-- Footer -->
     <footer class="foot">
