image change and changing minor details

--- a/Third Assignment/certificates.html
+++ b/Third Assignment/certificates.html
@@ -142,7 +142,7 @@
               <i class="fas fa-envelope mr-2"></i>
               monjurmorshedosama75@gmail.com
             </p>
-            <p><i class="fas fa-phone mr-2"></i> +880 1997-007988</p>
+            <p><i class="fas fa-phone mr-2"></i>+880 1997-007988</p>
             <p>
               <i class="fas fa-map-marker-alt mr-2"></i> Rajshahi, Bangladesh
             </p>
@@ -171,7 +171,7 @@
             <a
               href="https://github.com/Monjur3175"
               target="_blank"
-              class="hover:text-white"
+              class="hover:text-black"
               ><i class="fab fa-github"></i
             ></a>
             <a
