--- a/Third Assignment/index.html
+++ b/Third Assignment/index.html
@@ -82,7 +82,7 @@
       <div id="right" class="flex justify-center">
         <img
           class="rounded-[50%] mt-8 max-md-hero:mt-8"
-          src="/src/images/Monjur Logo.png"
+          src="/src/images/Monjur-Logo.png"
           alt="Hero Img"
         />
       </div>
@@ -97,7 +97,7 @@
               <i class="fas fa-envelope mr-2"></i>
               monjurmorshedosama75@gmail.com
             </p>
-            <p><i class="fas fa-phone mr-2"></i> +880 1997-007988</p>
+            <p><i class="fas fa-phone mr-2"></i>+880 1997-007988</p>
             <p>
               <i class="fas fa-map-marker-alt mr-2"></i> Rajshahi, Bangladesh
             </p>
