--- a/Third Assignment/index.html
+++ b/Third Assignment/index.html
@@ -91,21 +91,21 @@
     <footer class="foot">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
         <div>
-          <h3 class="text-xl font-semibold mb-4">Contact Me</h3>
+          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2]">Contact Me</h3>
           <div class="space-y-2">
             <p>
-              <i class="fas fa-envelope mr-2"></i>
+              <i class="fas fa-envelope mr-2 text-[#4a90e2]"></i>
               monjurmorshedosama75@gmail.com
             </p>
-            <p><i class="fas fa-phone mr-2"></i>+880 1997-007988</p>
+            <p><i class="fas fa-phone mr-2 text-[#4a90e2]"></i>+880 1997-007988</p>
             <p>
-              <i class="fas fa-map-marker-alt mr-2"></i> Rajshahi, Bangladesh
+              <i class="fas fa-map-marker-alt mr-2 text-[#4a90e2]"></i> Rajshahi, Bangladesh
             </p>
           </div>
         </div>
 
         <div>
-          <h3 class="text-xl font-semibold mb-4">Quick Links</h3>
+          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2]">Quick Links</h3>
           <nav class="flex flex-col space-y-2">
             <a href="about.html" class="hover:text-amber-400">About</a>
             <a href="experience.html" class="hover:text-amber-400"
@@ -121,7 +121,7 @@
         </div>
 
         <div>
-          <h3 class="text-xl font-semibold mb-4">Connect With Me</h3>
+          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2]">Connect With Me</h3>
           <div class="flex gap-4 text-2xl">
             <a
               href="https://github.com/Monjur3175"
