--- a/Third Assignment/experience.html
+++ b/Third Assignment/experience.html
@@ -58,7 +58,7 @@
           >Certificates</a
         >
         <a
-          class="p-4 rounded-xl text-white hover:text-black hover:bg-white hover:shadow-[4px_4px_10px_0px_#000000]"
+          class="p-4 rounded-xl text-white hover:text-black hover:bg-white hover:shadow-[4px_4px_10px_0px_#000000] duration-300 ease-in"
           href="contact.html"
           >Contact</a
         >
