--- a/Third Assignment/index.html
+++ b/Third Assignment/index.html
@@ -28,37 +28,37 @@
       </div>
       <div class="mt-2">
         <a
-          class="p-4 rounded-xl text-amber-400 hover:bg-amber-100 hover:shadow-[4px_4px_10px_0px_#ffb066]"
+          class="p-4 rounded-xl text-amber-400 hover:bg-amber-100 hover:shadow-[4px_4px_10px_0px_#ffb066] duration-300 ease-in"
           href="index.html"
           >Home</a
         >
         <a
-          class="p-4 rounded-xl text-green-400 hover:bg-green-700 hover:shadow-[4px_4px_10px_0px_#10ed00]"
+          class="p-4 rounded-xl text-green-400 hover:bg-green-700 hover:shadow-[4px_4px_10px_0px_#10ed00] duration-300 ease-in"
           href="about.html"
           >About</a
         >
         <a
-          class="p-4 rounded-xl text-red-400 hover:bg-red-100 hover:shadow-[4px_4px_10px_0px_#ff4d4d]"
+          class="p-4 rounded-xl text-red-400 hover:bg-red-100 hover:shadow-[4px_4px_10px_0px_#ff4d4d] duration-300 ease-in"
           href="experience.html"
           >Experience</a
         >
         <a
-          class="p-4 rounded-xl text-blue-400 hover:bg-blue-100 hover:shadow-[4px_4px_10px_0px_#66b9ff]"
+          class="p-4 rounded-xl text-blue-400 hover:bg-blue-100 hover:shadow-[4px_4px_10px_0px_#66b9ff] duration-300 ease-in"
           href="skills.html"
           >Skills</a
         >
         <a
-          class="p-4 rounded-xl text-purple-400 hover:bg-purple-100 hover:shadow-[4px_4px_10px_0px_#d466ff]"
+          class="p-4 rounded-xl text-purple-400 hover:bg-purple-100 hover:shadow-[4px_4px_10px_0px_#d466ff] duration-300 ease-in"
           href="projects.html"
           >Projects</a
         >
         <a
-          class="p-4 rounded-xl text-orange-400 hover:bg-orange-100 hover:shadow-[4px_4px_10px_0px_#ffac69]"
+          class="p-4 rounded-xl text-orange-400 hover:bg-orange-100 hover:shadow-[4px_4px_10px_0px_#ffac69] duration-300 ease-in"
           href="certificates.html"
           >Certificates</a
         >
         <a
-          class="p-4 rounded-xl text-White hover:bg-white hover:text-black hover:shadow-[4px_4px_10px_0px_#000000]"
+          class="p-4 rounded-xl text-White hover:bg-white hover:text-black hover:shadow-[4px_4px_10px_0px_#000000] duration-300 ease-in"
           href="contact.html"
           >Contact</a
         >
