including meta tags

--- a/Third Assignment/contact.html
+++ b/Third Assignment/contact.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact</title>
+    <meta
+      name="description"
+      content="Monjur Morshed's Personal Portfolio Website "
+    />
+    <meta
+      name="keywords"
+      content="Monjur Morshed Portfolio, Monjur, Morshed, Monjur Morshed"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -19,9 +31,7 @@
   </head>
   <body class="font-google">
     <!-- Navbar -->
-    <nav
-      class="navbar"
-    >
+    <nav class="navbar">
       <div class="flex items-center gap-3">
         <img src="/src/images/Monjur_Logo.png" width="40" alt="Logo" />
         <a class="font-semibold text-3xl" href="index.html">Monjur Morshed</a>
@@ -66,51 +76,59 @@
     </nav>
     <!-- Profiles Section  -->
     <div class="container">
-      <h2 class="text-3xl font-semibold py-2 border-b-2 border-indigo-500">Profiles</h2>
-        <a class="btn inline-block my-2 hover:bg-green-400" href="https://github.com/Monjur3175" target="_blank"
-          ><i class="fab fa-github"></i> GitHub</a
-        >
-        <a
-          class="btn inline-block my-2 hover:bg-green-400"
-          href="https://www.linkedin.com/in/monjur-morshed-182566291/"
-          target="_blank"
-          ><i class="fab fa-linkedin"></i> LinkedIn</a
-        >
-        <a
-          class="btn inline-block my-2 hover:bg-green-400"
-          href="https://codeforces.com/profile/monjur7075"
-          target="_blank"
-          ><i class="fas fa-code"></i> Codeforces</a
-        >
-        <a
-          class="btn inline-block my-2 hover:bg-green-400"
-          href="https://www.codechef.com/users/monjurmorshed"
-          target="_blank"
-          ><i class="fas fa-code"></i> CodeChef</a
-        >
-        <a class="btn inline-block my-2 hover:bg-green-400" href="https://t.me/monjur7075" target="_blank"
-          ><i class="fab fa-telegram"></i> Telegram</a
-        >
-        <a
-          class="btn inline-block my-2 hover:bg-green-400"
-          href="mailto:monjurmorshedosama75@gmail.com"
-          target="_blank"
-          ><i class="fas fa-envelope"></i> Email</a
-        >
-        <a
-          class="btn inline-block my-2 hover:bg-green-400"
-          href="https://wa.me/+8801997007988"
-          target="_blank"
-          class="contact-item"
-        >
-          <i class="fab fa-whatsapp"></i> WhatsApp
-        </a>
-
-        
+      <h2 class="text-3xl font-semibold py-2 border-b-2 border-indigo-500">
+        Profiles
+      </h2>
+      <a
+        class="btn inline-block my-2 hover:bg-green-400"
+        href="https://github.com/Monjur3175"
+        target="_blank"
+        ><i class="fab fa-github"></i> GitHub</a
+      >
+      <a
+        class="btn inline-block my-2 hover:bg-green-400"
+        href="https://www.linkedin.com/in/monjur-morshed-182566291/"
+        target="_blank"
+        ><i class="fab fa-linkedin"></i> LinkedIn</a
+      >
+      <a
+        class="btn inline-block my-2 hover:bg-green-400"
+        href="https://codeforces.com/profile/monjur7075"
+        target="_blank"
+        ><i class="fas fa-code"></i> Codeforces</a
+      >
+      <a
+        class="btn inline-block my-2 hover:bg-green-400"
+        href="https://www.codechef.com/users/monjurmorshed"
+        target="_blank"
+        ><i class="fas fa-code"></i> CodeChef</a
+      >
+      <a
+        class="btn inline-block my-2 hover:bg-green-400"
+        href="https://t.me/monjur7075"
+        target="_blank"
+        ><i class="fab fa-telegram"></i> Telegram</a
+      >
+      <a
+        class="btn inline-block my-2 hover:bg-green-400"
+        href="mailto:monjurmorshedosama75@gmail.com"
+        target="_blank"
+        ><i class="fas fa-envelope"></i> Email</a
+      >
+      <a
+        class="btn inline-block my-2 hover:bg-green-400"
+        href="https://wa.me/+8801997007988"
+        target="_blank"
+        class="contact-item"
+      >
+        <i class="fab fa-whatsapp"></i> WhatsApp
+      </a>
     </div>
     <!-- Contact Section  -->
     <div class="container">
-      <h2 class="text-3xl font-semibold py-2 border-b-2 border-indigo-500">Contact</h2>
+      <h2 class="text-3xl font-semibold py-2 border-b-2 border-indigo-500">
+        Contact
+      </h2>
       <div>
         <p><i class="fas fa-envelope"></i> monjurmorshedosama75@gmail.com</p>
         <p><i class="fas fa-phone"></i> +880 1997-007988</p>
@@ -131,9 +149,12 @@
               <i class="fas fa-envelope mr-2 text-[#4a90e2]"></i>
               monjurmorshedosama75@gmail.com
             </p>
-            <p><i class="fas fa-phone mr-2 text-[#4a90e2]"></i>+880 1997-007988</p>
             <p>
-              <i class="fas fa-map-marker-alt mr-2 text-[#4a90e2]"></i> Rajshahi, Bangladesh
+              <i class="fas fa-phone mr-2 text-[#4a90e2]"></i>+880 1997-007988
+            </p>
+            <p>
+              <i class="fas fa-map-marker-alt mr-2 text-[#4a90e2]"></i>
+              Rajshahi, Bangladesh
             </p>
           </div>
         </div>
@@ -155,7 +176,9 @@
         </div>
 
         <div>
-          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2]">Connect With Me</h3>
+          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2]">
+            Connect With Me
+          </h3>
           <div class="flex gap-4 text-2xl">
             <a
               href="https://github.com/Monjur3175"
