--- a/Third Assignment/about.html
+++ b/Third Assignment/about.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About</title>
+    <meta name="title" content="Monjur Morshed" />
+    <meta
+      name="description"
+      content="Monjur Morshed's Personal Portfolio Website "
+    />
+    <meta
+      name="keywords"
+      content="Monjur Morshed Portfolio, Monjur, Morshed, Monjur Morshed"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -19,9 +32,7 @@
   </head>
   <body class="font-google">
     <!-- Navbar -->
-    <nav
-      class="navbar"
-    >
+    <nav class="navbar">
       <div class="flex items-center gap-3">
         <img src="/src/images/Monjur_Logo.png" width="40" alt="Logo" />
         <a class="font-semibold text-3xl" href="index.html">Monjur Morshed</a>
@@ -180,9 +191,13 @@
         Interest
       </h2>
       <div class="flex justify-around px-32 gap-2">
-        <h3 class="pt-4 text-xl font-bold mt-2 btn text-center">Competitive Programming</h3>
+        <h3 class="pt-4 text-xl font-bold mt-2 btn text-center">
+          Competitive Programming
+        </h3>
 
-        <h3 class="pt-4 text-xl font-bold mt-2 btn text-center">Web Development</h3>
+        <h3 class="pt-4 text-xl font-bold mt-2 btn text-center">
+          Web Development
+        </h3>
       </div>
     </div>
     <!-- Footer -->
@@ -195,9 +210,12 @@
               <i class="fas fa-envelope mr-2 text-[#4a90e2]"></i>
               monjurmorshedosama75@gmail.com
             </p>
-            <p><i class="fas fa-phone mr-2 text-[#4a90e2]"></i>+880 1997-007988</p>
             <p>
-              <i class="fas fa-map-marker-alt mr-2 text-[#4a90e2]"></i> Rajshahi, Bangladesh
+              <i class="fas fa-phone mr-2 text-[#4a90e2]"></i>+880 1997-007988
+            </p>
+            <p>
+              <i class="fas fa-map-marker-alt mr-2 text-[#4a90e2]"></i>
+              Rajshahi, Bangladesh
             </p>
           </div>
         </div>
@@ -219,7 +237,9 @@
         </div>
 
         <div>
-          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2]">Connect With Me</h3>
+          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2]">
+            Connect With Me
+          </h3>
           <div class="flex gap-4 text-2xl">
             <a
               href="https://github.com/Monjur3175"
