--- a/Third Assignment/experience.html
+++ b/Third Assignment/experience.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Experience</title>
+    <meta
+      name="description"
+      content="Monjur Morshed's Personal Portfolio Website "
+    />
+    <meta
+      name="keywords"
+      content="Monjur Morshed Portfolio, Monjur, Morshed, Monjur Morshed"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -19,9 +31,7 @@
   </head>
   <body class="font-google">
     <!-- Navbar -->
-    <nav
-      class="navbar"
-    >
+    <nav class="navbar">
       <div class="flex items-center gap-3">
         <img src="/src/images/Monjur_Logo.png" width="40" alt="Logo" />
         <a class="font-semibold text-3xl" href="index.html">Monjur Morshed</a>
@@ -64,22 +74,36 @@
         >
       </div>
     </nav>
-    
+
     <!-- Experience Section -->
-    <div id="container" class="m-10 p-2 text-justify bg-indigo-50 rounded-2xl hover:bg-indigo-200">
+    <div
+      id="container"
+      class="m-10 p-2 text-justify bg-indigo-50 rounded-2xl hover:bg-indigo-200"
+    >
       <h2 class="text-3xl font-semibold">Professional Experience</h2>
       <h3 class="my-2 py-4 border-t-2 border-indigo-500 text-xl font-bold">
         IT Executive — NextNode
       </h3>
-      <h4><span class="font-bold">Rajshahi, Bangladesh (Remote) </span>| Dec 2024 – Present</h4>
+      <h4>
+        <span class="font-bold">Rajshahi, Bangladesh (Remote) </span>| Dec 2024
+        – Present
+      </h4>
       <ul class="list-disc ml-4">
         <li>Manage and monitor IT infrastructure and endpoints.</li>
         <li>Support software development operations.</li>
-        <li>Collaborate with cross-functional teams to improve productivity.</li>
+        <li>
+          Collaborate with cross-functional teams to improve productivity.
+        </li>
       </ul>
-      <a href="https://nextnode.netlify.app/" target="_blank" rel="noopener noreferrer" class="text-amber-600">Visit NextNode Website</a>
+      <a
+        href="https://nextnode.netlify.app/"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="text-amber-600"
+        >Visit NextNode Website</a
+      >
     </div>
-    
+
     <!-- Footer -->
     <footer class="foot">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -90,9 +114,12 @@
               <i class="fas fa-envelope mr-2 text-[#4a90e2]"></i>
               monjurmorshedosama75@gmail.com
             </p>
-            <p><i class="fas fa-phone mr-2 text-[#4a90e2]"></i>+880 1997-007988</p>
             <p>
-              <i class="fas fa-map-marker-alt mr-2 text-[#4a90e2]"></i> Rajshahi, Bangladesh
+              <i class="fas fa-phone mr-2 text-[#4a90e2]"></i>+880 1997-007988
+            </p>
+            <p>
+              <i class="fas fa-map-marker-alt mr-2 text-[#4a90e2]"></i>
+              Rajshahi, Bangladesh
             </p>
           </div>
         </div>
@@ -114,7 +141,9 @@
         </div>
 
         <div>
-          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2]">Connect With Me</h3>
+          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2]">
+            Connect With Me
+          </h3>
           <div class="flex gap-4 text-2xl">
             <a
               href="https://github.com/Monjur3175"
