--- a/Third Assignment/skills.html
+++ b/Third Assignment/skills.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Skills</title>
+    <meta
+      name="description"
+      content="Monjur Morshed's Personal Portfolio Website "
+    />
+    <meta
+      name="keywords"
+      content="Monjur Morshed Portfolio, Monjur, Morshed, Monjur Morshed"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
