Fix in the responsive connect with me section

--- a/Third Assignment/skills.html
+++ b/Third Assignment/skills.html
@@ -224,8 +224,8 @@
         </div>
 
         <div>
-          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2]">Connect With Me</h3>
-          <div class="flex gap-4 text-2xl">
+          <h3 class="text-xl font-semibold mb-4 text-[#4a90e2] text-center">Connect With Me</h3>
+          <div class="flex gap-4 text-2xl justify-center">
             <a
               href="https://github.com/Monjur3175"
               target="_blank"
