change of footer colour

--- a/fourth assignment/index.html
+++ b/fourth assignment/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <footer>
-      <div class="text-center bg-gray-400 border-t-2">&copy;All Rights Reserved</div>
+      <div class="text-center bg-amber-50 py-3">&copy;All Rights Reserved</div>
     </footer>
     <script src="/src/script.js"></script>
 </body>
