--- a/daily_task7/index.html
+++ b/daily_task7/index.html
@@ -1,155 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cafe Street</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="icon" type="image/x-icon" href="img/Title.png">
-  </head>
-  <body>
-    <header>
-      <nav>
-        <img src="img/logo_coffe.svg" alt="logo_coffe" />
-        <ul>
-          <li>About us</li>
-          <li>Our Product</li>
-          <li>Delivery</li>
-        </ul>
-        <div class="search-box">
-          <i class="fa-solid fa-magnifying-glass"></i
-          ><input type="text" placeholder="capuccino" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cafe Street</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="img/Title.png">
+</head>
+
+<body>
+  <header>
+    <nav>
+      <img src="img/logo_coffe.svg" alt="logo_coffe" />
+      <ul>
+        <li>About us</li>
+        <li>Our Product</li>
+        <li>Delivery</li>
+      </ul>
+      <div class="search-box">
+        <i class="fa-solid fa-magnifying-glass"></i><input type="text" placeholder="capuccino" />
+      </div>
+      <img src="img/icons_cart.png" alt="icons_cart" class="icons_cart" />
+    </nav>
+    <div class="hero">
+      <div class="para">
+        <h1>
+          Enjoy your <span style="color: rgb(255, 145, 43)">coffee</span><br />
+          before your activity
+        </h1>
+        <p>
+          Boost your productivity and build your <br />mood with a glass of
+          coffee in the morning
+        </p>
+        <div class="btns">
+          <a href="#" class="order">Order Now <img src="img/btnlogo.png" alt="btn" class="btnlogo" /></a>
+          <a href="#" class="more">More menu</a>
         </div>
-        <img src="img/icons_cart.png" alt="icons_cart" class="icons_cart" />
-      </nav>
-      <div class="hero">
-        <div class="para">
-          <h1>
-            Enjoy your <span style="color: rgb(255, 145, 43)">coffee</span
-            ><br />
-            before your activity
+      </div>
+      <div class="hero-img">
+        <img src="img/hero img/Ellipse 5.png" alt="" class="e" />
+        <img src="img/hero img/Exclude.png" alt="" class="ex" />
+        <img src="img/hero img/Coffee mug.png" alt="" class="c" />
+        <div class="rating">
+          <h1 class="capuccino">Cappuccino</h1>
+          <h1 class="rate">
+            4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
           </h1>
-          <p>
-            Boost your productivity and build your <br />mood with a glass of
-            coffee in the morning
-          </p>
-          <div class="btns">
-            <a href="#" class="order"
-              >Order Now <img src="img/btnlogo.png" alt="btn" class="btnlogo"
-            /></a>
-            <a href="#" class="more">More menu</a>
-          </div>
+          <h1 class="k">18K</h1>
         </div>
-        <div class="hero-img">
-          <img src="img/hero img/Ellipse 5.png" alt="" class="e" />
-          <img src="img/hero img/Exclude.png" alt="" class="ex" />
-          <img src="img/hero img/Coffee mug.png" alt="" class="c" />
-          <div class="rating">
-            <h1 class="capuccino">Cappuccino</h1>
-            <h1 class="rate">
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="popular">
+      <h1>Popular Now <img src="img/Rectangle 7.png" alt="popular" /></h1>
+      <div class="bgnd">
+        <img src="img/Rectangle 2.png" alt="" />
+      </div>
+      <div class="cards">
+        <div class="card1">
+          <div class="img-box">
+            <h1>
               4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
             </h1>
-            <h1 class="k">18K</h1>
+            <img src="img/Vanilla Latte.png" alt="Vanilla Latte" />
+          </div>
+
+          <div class="card-text">
+            <h1>Vanilla Latte</h1>
+            <p>21K</p>
+          </div>
+          <div class="tags">
+            <a href="#" class="hot">Hot</a>
+            <a href="#" class="cold">Cold</a>
+            <img src="img/Frame 5.png" alt="" />
+          </div>
+        </div>
+        <div class="card2">
+          <div class="img-box">
+            <h1>
+              4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
+            </h1>
+            <img src="img/espresso.png" alt="espresso" />
+          </div>
+
+          <div class="card-text">
+            <h1>Espresso</h1>
+            <p>12K</p>
+          </div>
+          <div class="tags">
+            <a href="#" class="hot">Hot</a>
+            <a href="#" class="cold">Cold</a>
+            <img src="img/Frame 5.png" alt="" />
+          </div>
+        </div>
+        <div class="card3">
+          <div class="img-box">
+            <h1>
+              4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
+            </h1>
+            <img src="img/hazelnut latte.png" alt="hazelnut Latte" />
+          </div>
+
+          <div class="card-text">
+            <h1>Hazelnut Latte</h1>
+            <p>23K</p>
+          </div>
+          <div class="tags">
+            <a href="#" class="hot">Hot</a>
+            <a href="#" class="cold">Cold</a>
+            <img src="img/Frame 5.png" alt="" />
           </div>
         </div>
       </div>
-    </header>
-    <main>
-      <div class="popular">
-        <h1>Popular Now <img src="img/Rectangle 7.png" alt="popular" /></h1>
-        <div class="bgnd">
-          <img src="img/Rectangle 2.png" alt="" />
+    </div>
+    <div class="delivery">
+      <h1 class="howto">How to use delivery service</h1>
+      <div class="delivery-card">
+        <div class="firstdev">
+          <img src="img/coffee-cup 2.png" alt="coffee cup" />
+          <h1>choose your coffee</h1>
+          <p>There are 20+ coffees for you</p>
         </div>
-        <div class="cards">
-          <div class="card1">
-            <div class="img-box">
-              <h1>
-                4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
-              </h1>
-              <img src="img/Vanilla Latte.png" alt="Vanilla Latte" />
-            </div>
-
-            <div class="card-text">
-              <h1>Vanilla Latte</h1>
-              <p>21K</p>
-            </div>
-            <div class="tags">
-              <a href="#" class="hot">Hot</a>
-              <a href="#" class="cold">Cold</a>
-              <img src="img/Frame 5.png" alt="" />
-            </div>
-          </div>
-          <div class="card2">
-            <div class="img-box">
-              <h1>
-                4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
-              </h1>
-              <img src="img/espresso.png" alt="espresso" />
-            </div>
-
-            <div class="card-text">
-              <h1>Espresso</h1>
-              <p>12K</p>
-            </div>
-            <div class="tags">
-              <a href="#" class="hot">Hot</a>
-              <a href="#" class="cold">Cold</a>
-              <img src="img/Frame 5.png" alt="" />
-            </div>
-          </div>
-          <div class="card3">
-            <div class="img-box">
-              <h1>
-                4.8<i class="fa-solid fa-star" style="color: #ffd057"></i>
-              </h1>
-              <img src="img/hazelnut latte.png" alt="hazelnut Latte" />
-            </div>
-
-            <div class="card-text">
-              <h1>Hazelnut Latte</h1>
-              <p>23K</p>
-            </div>
-            <div class="tags">
-              <a href="#" class="hot">Hot</a>
-              <a href="#" class="cold">Cold</a>
-              <img src="img/Frame 5.png" alt="" />
-            </div>
-          </div>
+        <div class="seconddev">
+          <img src="img/food-truck 1.png" alt="food-truck" />
+          <h1>we delivery it to you</h1>
+          <p>Choose delivery service</p>
+        </div>
+        <div class="thirddev">
+          <img src="img/image.png" alt="coffee cup" />
+          <h1>Enjoy your coffee</h1>
+          <p>Choose delivery service</p>
         </div>
       </div>
-      <div class="delivery">
-        <h1 class="howto">How to use delivery service</h1>
-        <div class="delivery-card">
-          <div class="firstdev">
-            <img src="img/coffee-cup 2.png" alt="coffee cup" />
-            <h1>choose your coffee</h1>
-            <p>there are 20+ coffees for you</p>
-          </div>
-          <div class="seconddev">
-            <img src="img/food-truck 1.png" alt="food-truck" />
-            <h1>we delivery it to you</h1>
-            <p>Choose delivery service</p>
-          </div>
-          <div class="thirddev">
-            <img src="img/image.png" alt="coffee cup" />
-            <h1>Enjoy your coffee</h1>
-            <p>Choose delivery service</p>
-          </div>
-        </div>
-      </div>
-    </main>
-  </body>
+    </div>
+  </main>
+</body>
+
 </html>
